hsreplay: fix tooltip going out of screen when looking at opponent's hand

--- a/yo/app/plugins/joustjs/joustjs.css
+++ b/yo/app/plugins/joustjs/joustjs.css
@@ -1695,7 +1695,7 @@
   position: absolute;
   width: 100%;
   height: 143px;
-  top: -80px;
+  top: -40px;
 }
 .hearthstone #externalPlayer .hand .game-card {
   display: inline-block;
@@ -1738,7 +1738,7 @@
 }
 .hearthstone #externalPlayer .mulligan {
   text-align: center;
-  top: 50%;
+  top: 55%;
   transform: translateY(-50%);
   position: absolute;
   width: 100%;
@@ -2098,6 +2098,7 @@
   padding: 0;
   opacity: 1;
   margin-left: -40px;
+  z-index: 10000;
 }
 .hearthstone #externalPlayer .card-tooltip:after {
   border: none;
